SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

5.0.0 (09/18/2025)
==================
Enhancements:

Introduced Java 25 compatibility.

Client properties in Object tree:
  A new detail tab name "Client Properties" of the Object tree's root node displays
  the properties returned by java.sql.Connection.getClientInfo().

#620 Equipped the file export dialog with a vertical scrollbar when needed.
  To better support this, the dialog was partly rearranged.

#620 UI table to MS Excel exports of SQL results now offers to create additional
  sheets containing the exported SQL statements.
  This is an extension of the original implementation of feature request 620.

#621 The UI table's "Copy separated by ..." right mouse menu function now allows
  to include column headers and to define a cell delimiter.

#620 Direct SQL to MS Excel exports now offers to create additional
  sheets containing the exported SQL statements.
  Note: For direct SQL exports, right mouse click an SQL statement or hit Ctrl+T --> sql2file
  or check the multiple sheet export explained in the "About Exporting" link at the bottom of the export dialog.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/61 (third)
SQL result search function: The tool tips of the "find next" and "find previous" buttons
  now show their keyboard shortcuts: Enter or F3 and Shift F3 respectively.

Improved logging:
  When a statement execution is canceled the JDBC driver usually exits the statement's execution
  by throwing an exception. This exception is now logged with level info.

Image display in table cell data dialog or table cell data detail:
  When decoding Base64, characters that are not valid Base64 characters are ignored.
  This is helpful, for example, when MySQL's TO_BASE64 function is used,